--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<footer id="footer">
 		<div class="container">
 			<form id="chatform" class="message">
-				<textarea id="chatinput" type="text" autocomplete="off" autofocus></textarea>
+				<textarea id="chatinput" type="text" autocomplete="off" autofocus placeholder="在此输入信息, Enter键发送""></textarea>
 			</form>
 		</div>
 	</footer>
